RESOLVED FIXED164093
Regression(r203601): Caused crashes in iBooks
https://bugs.webkit.org/show_bug.cgi?id=164093
Summary Regression(r203601): Caused crashes in iBooks
Chris Dumez
Reported 2016-10-27 16:30:31 PDT
r203601 caused crashes in iBooks. The change made the parameter non-nullable. In ObjC bindings, the approach at the time was to throw an exception (and therefore crash) when passing nil.
Attachments
Patch (1.36 KB, patch)
2016-10-27 16:34 PDT, Chris Dumez
no flags
Patch (8.74 KB, patch)
2016-10-27 17:04 PDT, Chris Dumez
no flags
Chris Dumez
Comment 1 2016-10-27 16:31:01 PDT
Chris Dumez
Comment 2 2016-10-27 16:34:42 PDT
Chris Dumez
Comment 3 2016-10-27 17:04:16 PDT
WebKit Commit Bot
Comment 4 2016-10-27 20:58:46 PDT
Comment on attachment 293081 [details] Patch Clearing flags on attachment: 293081 Committed r208027: <http://trac.webkit.org/changeset/208027>
WebKit Commit Bot
Comment 5 2016-10-27 20:58:51 PDT
All reviewed patches have been landed. Closing bug.
Note You need to log in before you can comment on or make changes to this bug.