Regression(r203601): Caused crashes in iBooks https://bugs.webkit.org/show_bug.cgi?id=164093 <rdar://problem/28745634>

Reviewed by Darin Adler.

Source/WebKit/mac:

Restore pre-r203601 behavior when calling [DOMNode compareDocumentPosition:nil],
which was to return Node::DOCUMENT_POSITION_DISCONNECTED.

* DOM/DOMNode.mm:
(-[DOMNode compareDocumentPosition:]):

Tools:

Add API test coverage.

* TestWebKitAPI/TestWebKitAPI.xcodeproj/project.pbxproj:
* TestWebKitAPI/Tests/mac/DOMNode.mm: Added.
(-[DOMNodeTest webView:didFinishLoadForFrame:]):
(TestWebKitAPI::TEST):


Canonical link: https://commits.webkit.org/181814@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@208027 268f45cc-cd09-0410-ab3c-d52691b4dbfc